The images are somewhere else.

--- a/hello_world.html
+++ b/hello_world.html
@@ -54,10 +54,10 @@
 					<li><a href="http://www.goldbelly.com" target="blank">GoldBelly</a></li>
 				</ul>
 
-				<img src="queso.jpg">
+				<!--<img src="queso.jpg">-->
 				<h2>My Vehicle</h2>
 				<p>This is an image of a Tesla model X. It cool...</p>
-				<img src="tesla.jpg">
+				<!--<img src="tesla.jpg">-->
 				<a href="#top">Back to top.</a>
 			<h2>Decimal to Hexadecimal Conversion Chart</h2>
 			<table>
@@ -67,19 +67,13 @@
 				<tr>
 					<td>0</td>
 					<td>0</td>
-				</tr>
 
-				<tr>
 					<td>1</td>
 					<td>1</td>
-				</tr>
 
-				<tr>
 					<td>2</td>
 					<td>2</td>
-				</tr>
 
-				<tr>
 					<td>3</td>
 					<td>3</td>
 				</tr>
