--- a/welcome.html
+++ b/welcome.html
@@ -15,8 +15,8 @@
     <hr>
     <h2>Core Values</h2>
     <ul>
-        <li>Competence</li>
         <li>Involvement</li>
+        <li>Competence</li>
         <li>Technology</li>
     </ul>
     <h2>Our Process</h2>
@@ -45,6 +45,7 @@
         </tr>
     </table>
     <h2>Our Product</h2>
+    <div id="container">
     <table>
         <tr>
             <th>Plan</th>
@@ -67,6 +68,7 @@
             <td>Unlimited Support</td>
         </tr>
     </table>
+    </div>
     <footer>
     <p>
         <em> All products come with our quality guarantee&#0153 </em>
