--- a/css/css_box_model.html
+++ b/css/css_box_model.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Box Model Exercise</title>
+    <link rel="stylesheet" href="box_model.css">
 </head>
 <body>
-$END$
+<a href="https://en.wikipedia.org/wiki/Visible_spectrum"> <h1>Visible Spectrum Wavelengths</h1> </a>
+    <div class="box red"> 620-750 nm </div>
+
+    <div class="box orange"> 590-620 nm </div>
+
+    <div class="box yellow"> 570-590 nm </div>
+
+    <div  class="box green"> 495-570 nm </div>
+
+    <div class="box blue"> 450-495 nm </div>
+
+    <div class="box violet"> 380-450 nm </div>
 </body>
 </html>
