--- a/css_box_model.html
+++ b/css_box_model.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Box Model Exercise</title>
-    <link rel="stylesheet" href="box_model.css">
+    <link rel="stylesheet" href="css/box_model.css">
 </head>
 <body>
 <a href="https://en.wikipedia.org/wiki/Visible_spectrum"> <h1>Visible Spectrum Wavelengths</h1> </a>
