Added title to page

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
-    <title>Title</title>
+    <title>Order Pizza</title>
 </head>
 <body>
     <nav class="navbar navbar-default">
