Forgot js script

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -105,7 +105,7 @@
                                 Large (14")
                             </label>
                         </div>
-                        </li>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -123,24 +123,19 @@
     <div class="panel panel-info">
             <div class="panel-heading">Choose Cheese and Sauce</div>
             <div class="panel-body">
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Cheese?</div>
-
-                            <ul class="list-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Cheese?</div>
+                    <ul class="list-group">
                             <li class="list-group-item list-group-item-info"><strong>Cheese</strong>
-
-                            <select class="form-control">
-                                <option>Light</option>
-                                <option>Normal</option>
-                                <option>Extra</option>
-                                <option>Double</option>
-                            </select>
+                                <select class="form-control">
+                                    <option>Light</option>
+                                    <option>Normal</option>
+                                    <option>Extra</option>
+                                    <option>Double</option>
+                                </select>
                             </li>
-                            </ul>
-
-
-                        </div>
+                    </ul>
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">Sauce?</div>
 
@@ -183,9 +178,6 @@
         </div>
 
     </div>
-
-
-
     <!--Meats and Non Meats-->
 <div class="panel panel-info">
         <div class="panel-heading">Choose Toppings</div>
@@ -213,7 +205,6 @@
                     <li class="list-group-item list-group-item-info"><input type="checkbox"><strong> Jalapeno Peppers</strong></li>
                     </ul>
                 </div>
-
             </div>
         </div>
         <div class="panel-footer">
@@ -226,5 +217,11 @@
                 </div>
 
         </div>
+
+    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
 </body>
 </html>
