Oh god I thought I lost this file

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -42,7 +42,7 @@
         subHeader.style.color= "blue";
 
         // TODO: Uncomment the next line and get all list items
-//         var listItems = document.getElementsByTagName("li");
+//         var listItems = document.getElementsByTagName("li");chec
 //         for (var i = 0; i < listItems.length; i ++) {
 //             var dbid = listItems[i].getAttribute("data-dbid");
 //         }
