--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1 id="main-header">Hello World!</h1>
+<button id="btn1">Click me!</button>
 <ul>
     <li data-dbid="1">Item 1</li>
     <li data-dbid="2">Item 2</li>
@@ -14,6 +15,7 @@
     <li data-dbid="4">Item 4</li>
     <li data-dbid="5">Item 5</li>
 </ul>
+<button id="btn2">Click here for a surprise!</button>
 <h2 id="sub-header">Hello Again.</h2>
 <p class="sub-paragraph">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -24,6 +26,7 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<button id="btn3">Enter!</button><button id="btn4">Goodbye!</button>
 
 <script>
     (function() {
@@ -31,15 +34,25 @@
         // TODO: Uncomment next line and get the main header element by id
          var mainHeader = document.getElementById("main-header");
 
+
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "Javascript is Cool";
+//        mainHeader.innerHTML = "Javascript is Cool";
+        var btn1 = document.getElementById("btn1");
+        btn1.addEventListener("click", function makeTextCool(){
+            mainHeader.innerHTML = "JavaScript is Cool";
+
+        });
 
         // TODO: Uncomment the next line and get the sub header element by id
          var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
 //        document.getElementById("sub-header").style.color = "blue";
-        subHeader.style.color= "blue";
+        var btn2 = document.getElementById("btn2");
+        btn2.addEventListener("click", function changeColor() {
+            subHeader.style.color= "blue";
+        });
+
 
         // TODO: Uncomment the next line and get all list items
 //         var listItems = document.getElementsByTagName("li");chec
@@ -49,17 +62,18 @@
         var listItems = document.getElementsByTagName("li");
 
         // TODO: Set text color on every other list item to grey
+        var btn3 = document.getElementById("btn3");
+        btn3.addEventListener("click", function textColor(){
 
-         for (var i = 0; i < listItems.length; i++){
-             if (i % 2 == 0) {
-                 listItems[i].style.color = "grey";
-             }
-             if (listItems[i].getAttribute("data-dbid") == 1){
-                 listItems[i].style.color = "blue";
-             }
-         }
-
-
+        for (var i = 0; i < listItems.length; i++){
+            if (i % 2 == 0) {
+                listItems[i].style.color = "grey";
+            }
+            if (listItems[i].getAttribute("data-dbid") == 1){
+                listItems[i].style.color = "blue";
+            }
+        }
+        });
 
         // TODO: Set text color of li with dbid = 1 to blue
 
@@ -67,7 +81,13 @@
          var subParagraphs = document.getElementsByClassName("sub-paragraph");
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerText = "Mission Accomplished!";
+        var btn4 = document.getElementById("btn4");
+        btn4.addEventListener("click", function missionAccomplished() {
+            subParagraphs[0].innerText = "Mission Accomplished!";
+        });
+
+
+
     })();
 </script>
 </body>
