--- a/ajax-practice.html
+++ b/ajax-practice.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Star Wars Ajax</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-$END$
+
+<main class="container">
+    <h1>AJAX demo</h1>
+</main>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<script>
+
+    $(document).ready(function() {
+
+        "use strict";
+
+        // simple request
+
+        $.ajax("./data/orders.json").done(function(responseData){
+            console.log(responseData);
+        });
+
+        // simple API request
+
+        $.ajax("http://swapi.co/api").done(function(data){
+            console.log(data);
+        });
+
+
+        // single argument with .done(), .fail() and .always() methods
+
+//        $.ajax({
+//            "url": "https://swapi.co/api/planets/1/?format=wookiee",
+//            "type": "GET",
+//            "data": {
+//                "search": "A New Hope"
+//            }
+//        }).done(function(data, status, jqXhr) {
+//            console.log("The home planet is " + data.results[0].planets);
+//        }).fail(function(jqXhr, status, error) {
+//            console.log("Request failed! " + status);
+//        }).always(function() {
+//            console.log("Request made.");
+//        });
+//
+
+        // Url first argument and configuration object second argument
+
+//        $.ajax("https://swapi.co/api/films", {
+//            "type": "GET",
+//            "data": {
+//                "search": "A New Hope"
+//            }
+//        }).done(function(data) {
+//            console.log("The director of Star Wars: A New Hope is..." + data.results[0].director);
+//        });
+//
+//
+//        // Storing returned jQuery XML HTTP Response object
+//
+//        var jqXhr = $.ajax("https://swapi.co/api/films", {
+//            "type": "GET",
+//            "data": {
+//                "search": "A New Hope"
+//            }
+//        });
+//
+//        console.log(jqXhr);
+//
+//        jqXhr.done(function(data) {
+//            console.log("The director of Star Wars: A New Hope is..." + data.results[0].director);
+//        });
+//
+//
+//        // GET short-hand method
+//
+//        $.get("https://swapi.co/api/films", {
+//            "data": {
+//                "search": "A New Hope"
+//            }
+//        }).done(function(data) {
+//            console.log("The director of Star Wars: A New Hope is..." + data.results[0].director);
+//        });
+
+    });
+
+</script>
+
 </body>
 </html>
