--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
 
@@ -18,8 +19,13 @@
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
-<button id="refresh">Refresh Invetory</button>
 
+<button id="refresh">Refresh Invetory</button>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
@@ -29,9 +35,15 @@
 
 
     $('#refresh').click(function () {
+
         $.get('data/inventory.json').done(function (data) {
         buildHTML(data);
-    });
+    }).fail(function (jqXhr,status,error) {
+        console.log("There was an error!");
+        console.log("Response status:" + status);
+        console.log("check console log for" + error);
+
+        });
     function buildHTML(insertProducts) {
         var insertProductsHTML = "";
         insertProducts.forEach(function (products) {
@@ -41,7 +53,7 @@
             insertProductsHTML += "<thead>";
             insertProductsHTML += "<th>" + products.title + "</th>";
             insertProductsHTML += "<th>" + products.quantity + "</th>";
-            insertProductsHTML += "<th>" + products.price + "</th>";
+            insertProductsHTML += "<th>$" + products.price + "</th>";
             insertProductsHTML += "<th>" + products.categories + "</th>";
             insertProductsHTML += "<tbody>";
 
